# Amulet-Test1

./: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
src/amulet/test1/: __init_amulet_test1.cpp
src/amulet_test1/: __init__.py  __init_amulet_test1.cpp  amulet_test1Config.cmake  dll.hpp  test1.cpp  test1.hpp
