[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
    "pybind11[global] == 2.13.6",
]
build-backend = "setuptools.build_meta"

[project]
name = "amulet_test1"
authors = [
    {name = "James Clare"},
]
description = "test_package1"
dynamic = ["version", "readme"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "amulet-compiler-target == 1.0"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = [
    "*Config.cmake",
    "**/*.hpp",
    "**/*.dll",
    "**/*.so",
    "**/*.dylib",
    "**/*.lib",
]

[tool.setuptools.dynamic]
version = {attr = "amulet_test1.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
